@@ -1,6 +1,6 @@
 Name: splines
-Version: 1.2.0
-Date: 2013-04-09
+Version: 1.2.1
+Date: 2013-06-03
 Author: various authors
 Maintainer: Nir Krakauer <nkrakauer@ccny.cuny.edu>
 Title: Splines.
