@@ -4,6 +4,7 @@ Spline functions
  csape
  csaps
  csaps_sel
+ dedup
  fnplt 
  fnder
  fnval
