@@ -1,3 +1,8 @@
+Summary of important user-visible changes for splines 1.2.1:
+-------------------------------------------------------------------
+
+ ** Points passed to csaps and csaps_sel now expected to be in strictly ascending order; new function dedup added to sort points and average values given at the same point
+
 Summary of important user-visible changes for splines 1.2.0:
 -------------------------------------------------------------------
 
